(lang dune 3.21)

(name chess-scribe-api)

(generate_opam_files true)

(source
 (github therealowenrees/chess-scribe-api))

(authors "Owen Rees<owenrees.dev@gmail.com>")

(maintainers "Owen Rees <owenrees.dev@gmail.com>")

(license AGPLv3)

(documentation https://url/to/documentation)

(package
 (name chess-scribe-api)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("chess" "pgn" "pdf")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
